test/invalid/non_utf8_character.d
//T error: non_utf8_character.d:6:11:
//T error: Invalid UTF-8 sequence.
// sdfmt off

void main() {
	char d = 'ä';
}
